--- a/rois/.htaccess
+++ b/rois/.htaccess
@@ -5,7 +5,7 @@
 		Header set Expires "Thu, 01 Dec 1994 16:00:00 GMT"
 	</IfModule>
 </Files>
-<files ~ "(^config\.php$|\.(ini|log|dat|json)$)">
+<files ~ "(^config\.php$|\.(ini|log|dat|json|db)$)">
 	order allow,deny
 	deny from all
 </files>
